--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1753,7 +1753,6 @@ textarea:focus {
   .popup_calc_content .balcon_icons img {
     width: 20%;
   }
-
   .popup_calc_content .big_img img {
     margin-bottom: 2rem;
     width: 25rem;
@@ -1804,6 +1803,10 @@ textarea:focus {
   .popup_calc_profile_button {
     padding: 1rem 5rem;
   }
+}
+.big_img {
+  display: flex;
+  justify-content: center;
 }
 
 /* small devices, tablets */
